2000-03-26  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/report/transaction-report.scm: i18n the report

	* src/gnome/window-register.c (gnc_transaction_delete_query):
 	destroy on close, don't hide.

	* src/register/splitreg.c: several new functions for saving and
	restore the contents of the cursor.

	* src/SplitLedger.c (xaccSRRedrawRegEntry): always redraw, caller
 	knows best!
	(LedgerMoveCursor): if we are leaving the pending transaction,
 	commit it.
	(xaccSRLoadRegister): save and restore changed cursor values.
	(xaccSRSaveRegEntry): clear the register change flags.

2000-03-24  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/register/gnome/quickfillcell-gnome.c (QuickFillDirect): if
 	the cursor is in the selection, move it to the start of the
 	selection.

	* Makefile.common: add the value of DEFS to the compile flags

	* Makefile.init.in: get the value for DEFS.

	* src/register/numcell.c: new cell for entering numbers. Handles
	accelerators for increasing/decreasing the number and remembers
	the largest number for auto-filling.

2000-03-23  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/report/average-balance.scm: fixed many things and i18n'd
	the report.

	* src/engine/util.c (PrintAmt): always use '.' as the decimal point
	coming from sprintf.

2000-03-22  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/prefs.scm: set the default currency code using the
	wrapped C function in util.c below.

	* src/engine/util.c (xaccSPrintAmount): add a PRTNMN flag for
 	printing non-monetary values.
	(gnc_locale_default_currency): return the currency code for the
 	current locale.

	* src/register/splitreg.c (xaccInitSplitRegister): update for
 	changes to the price cell api.

	* src/engine/util.c (xaccSPrintAmount): set the precision based on
 	the locale.

	* src/register/pricecell.c: remove some unneeded api calls and
	add one for specifying that the cell contains a share quantity.

2000-03-19  Dave Peticolas  <peticola@cs.ucdavis.edu>
